Utilizando flex em vez de grid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="grid" cols="3 auto">
-  <div col="2" pct="60" style="background: red;">
+<div flex>
+  <div flex="70 center" style="background: red;">
     test
   </div>
 </div>
