--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <div flex>
-  <div flex="70 center" style="background: red;">
-    test
-  </div>
+  <div>Logo</div>
+  <div flex="center">Component Name</div>
+  <mat-slide-toggle [(ngModel)]="value" (click)="switchTheme()">{{theme}}</mat-slide-toggle>
 </div>
 
-<mat-slide-toggle [(ngModel)]="value" (click)="switchTheme()">{{theme}}</mat-slide-toggle>
 
 
 
