--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,11 @@ $dark-theme: mat.define-theme((
   ),
 ));
 
+:root{
+  --bg: rgb(220,220,220);
+  --color: rgb(50,50,50);
+}
+
 html,
 body {
   height: 100%;
@@ -29,18 +34,25 @@ html{
   }
   body {
     margin: 0;
-    padding: 15px;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 
     transition: background 0.8s;
 
     @include mat.all-component-themes($light-theme);
     @include lote.components($light-theme);
+    
+    @include padStructure(5px);
+    @include flexStructure(6px);
+    @include stickyStructure($light-theme);
+
     &.dark {
+      --bg: rgb(50,50,50);
+      --color: rgb(220,220,220);
+
       @include mat.all-component-colors($dark-theme);
       @include lote.components($dark-theme);
+
+      @include stickyStructure($dark-theme);
     }
   }
 }
-
-@include flexStructure()
