--- a/src/utils/scss/utils.scss
+++ b/src/utils/scss/utils.scss
@@ -1,3 +1,5 @@
+@use "@angular/material" as mat;
+
 @function generate-selector-list($args...) {
   $selector: null;
   /* Percorrendo pelos lista de seletores */
@@ -88,10 +90,100 @@
       }
     }
   }
-
 }
 
-@mixin flexStructure() {
+@mixin stickyStructure($theme) {
+  $primary: none;
+  $tertiary: none;
+  $background: none;
+  @if mat.get-theme-type($theme) == dark {
+    $primary: mat.get-theme-color($theme, primary, 30);
+    $tertiary: mat.get-theme-color($theme, tertiary, 50);
+    $background: #ffffffcc;
+  } @else {
+    $primary: mat.get-theme-color($theme, primary, 80);
+    $tertiary: mat.get-theme-color($theme, tertiary, 40);
+    $background: #000000cc;
+  }
+
+  [sticky]{
+    z-index: 1;
+    position: sticky;
+    top: 0;
+    color: opacify(invert($background), 1);
+    *{
+      color: opacify(invert($background), 1);      
+    }
+    &::after{
+      content: "";
+      position: absolute;
+      inset: 0;
+      z-index: -1;
+      background: $background;
+      mask: linear-gradient(to top,rgba(0,0,0,0) 0%, $background 33%, $background 66%, rgba(0,0,0,0));
+      backdrop-filter: blur(5px);
+    }
+
+    &[sticky~="top"]{
+      mask: linear-gradient(to top,rgba(0,0,0,0) 0%, $background 33%, $background 66%, rgba(0,0,0,0));
+      top: 0;
+    }
+    &[sticky~="bottom"]{
+      mask: linear-gradient(to bottom,rgba(0,0,0,0) 0%, $background 33%, $background 66%, rgba(0,0,0,0));
+      top: auto;
+      bottom: 0;
+    }
+    &[sticky~="left"]{
+      mask: linear-gradient(to left,rgba(0,0,0,0) 0%, $background 33%, $background 66%, rgba(0,0,0,0));
+      top: auto;
+      left: 0;
+    }
+    &[sticky~="right"]{
+      mask: linear-gradient(to right,rgba(0,0,0,0) 0%, $background 33%, $background 66%, rgba(0,0,0,0));
+      top: auto;
+      right: 0;
+    }
+  }
+}
+
+@mixin padStructure($default) {
+  [pad]{
+    &[pad=""]{
+      padding: $default;
+    }
+    &[pad~="bottom"]{
+      padding-bottom: $default;
+    }
+    &[pad~="top"]{
+      padding-top: $default;
+    }
+    &[pad~="left"]{
+      padding-left: $default; 
+    }
+    &[pad~="right"]{
+      padding-right: $default;
+    }
+
+    @for $i from 0 through 20 {
+      &[pad~="#{$i}"]{
+        &[pad~="bottom"]{
+          padding-bottom: #{$i}px;
+        }
+        &[pad~="top"]{
+          padding-top: #{$i}px;
+        }
+        &[pad~="left"]{
+          padding-left: #{$i}px;
+        }
+        &[pad~="right"]{
+          padding-right: #{$i}px;
+        }
+      }
+    }
+  }
+}
+
+@mixin flexStructure($defaultGap) {
   *{
     &:not([flex]>[flex]){
       &[flex]{
@@ -101,6 +193,9 @@
   }
 
   [flex]{
+    column-gap: $defaultGap;
+    row-gap: $defaultGap;    
+
     transition: flex-basis 0.5s, width 0.5s, height 0.5s;
     text-wrap: nowrap;
 
@@ -110,25 +205,69 @@
     &[flex~="very-slow"]{
       transition: flex-basis 2s, width 2s, height 2s;
     }
+    
     &[flex~="row"]{
       flex-flow: column;
-      width: 100%;
     }
     &[flex~="on"]{
       display: flex;
     }
+
     &[flex~="center"]{
       margin: auto;
+    }
+    &[flex~="v-center"]{
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+    &[flex~="h-center"]{
+      margin-left: auto;
+      margin-right: auto;
     }
     &[flex~="right"]{
       margin-left: auto;
     }
-    &[flex~="adapt"]{
+
+    &[flex~="border"]{
+      border: 1px solid;
+      border-radius: 10px;
+      padding: $defaultGap;
+    }
+
+    
+    &[flex~="grow"]{
       flex-grow: 1;
     }
+    &[flex~="no-shrink"]{      
+      flex-shrink: 0;
+    }
+
     &[flex~="hide"]{
       overflow: hidden;
+    }    
+    &[flex~="scroll"]{
+      overflow: auto;
     }
+    &[flex~="scroll-y"]{
+      overflow-y: auto;
+      overflow-x: hidden;
+    }
+    &[flex~="scroll-x"]{
+      overflow-x: auto;
+      overflow-y: hidden;
+    }
+
+    @for $i from 0 through 20 {
+      &[gap~="#{$i}"]{
+        &[gap~="col"]{
+          column-gap: #{$i}px;
+        }
+        &[gap~="row"]{
+          column-gap: #{$i}px;
+        }
+      }
+    }
+
     @for $i from 0 through 100 {
       &[flex~="#{$i}"]{
         $pct: percentage(calc($i/100));
